--- a/index.html
+++ b/index.html
@@ -421,7 +421,7 @@
     </div> 
 
     <footer class="app-footer">
-        <span class="disclaimer-bold">DISCLAIMER:</span> This tool is for flight planning purposes only and does not replace a qualified pilot, a current navigation database, or basic common sense. While the math is solid, gravity is a constant that doesn't care about your copy-paste errors. Verify all coordinates and identifiers against official FAA NASR data before use.
+        <span class="disclaimer-bold">DISCLAIMER:</span> This tool is for utility purposes only and does not replace a qualified pilot, a current navigation database, or basic common sense. While the math is solid, gravity is a constant that doesn't care about your copy-paste errors. Verify all coordinates and identifiers against official FAA NASR data before use.
     </footer>
 
 </div> <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
